schema/testdata/errors/reserved_field_name_updated_at.keel
model User {
    fields {
        //expect-error:9:18:E006:Cannot use 'updatedAt' as it already exists as a built-in field
        updatedAt Text
    }
}
